# buglogger-edge

./: README.md  pyproject.toml  schema.sql  wrangler.jsonc
public/: index.html
src/: entry.py
